cambiata frase finale regalo

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <br>
     <br>
     <br>
-    <h1 style="color: white;">Quando hai finito di leggere... apri pure il tuo regalo!</h1>
+    <h1 style="color: white;">Spero che il regalo ti sia piaciuto! 👀</h1>
     <h1>🎁</h1>
   </div>
     <br>
